# ToDoList

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.bak  LICENSE  README.md  docker-compose.yaml  docker-compose.yaml.bak  entrypoint.sh  entrypoint.sh.1  entrypoint.sh.bak  mypy.ini  pyproject.toml
src/todolist/core/: admin.py  models.py  serializers.py  urls.py  views.py
src/todolist/core/migrations/: 0001_initial.py
src/todolist/todolist/: settings.py  urls.py
