[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["Alexander Altukhov <sasha@littlebox.spb.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
python-dotenv = "^1.0.1"
pre-commit-update = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
