[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["Alexander Altukhov <sasha@littlebox.spb.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
python-dotenv = "^1.0.1"
pre-commit-update = "^0.5.0"
pre-commit = "^3.8.0"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
    venv/
    tests/
    pyproject.toml
'''

[tool.isort]
py_version="312"
profile = "django"
include_trailing_comma = true
line_length = 120
lines_after_imports = 2
multi_line_output = 2
known_first_party = ["todolist","core"]
skip = [".git","venv","tests","__init__.py"]
